--- a/css/style.css
+++ b/css/style.css
@@ -108,8 +108,8 @@ body.menu-container {
     padding-right: 28px;
 
     display: flex;
-        flex-direction: column;
-        align-items: center;
+    flex-direction: column;
+    align-items: center;
 
 }
 
@@ -121,7 +121,7 @@ body.menu-container {
     font-size: 16px;
     line-height: 1.5;
     text-align: center;
-    /* width: 98px; */
+   
     color: #131313;
 }
 
@@ -195,7 +195,7 @@ body.menu-container {
 
 
 /* input field*/
-.group-wrap {
+/* .group-wrap {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -207,40 +207,143 @@ body.menu-container {
 .form-field {
     margin-bottom: 12px;
 }
+ */
 
-.form-field__input {
+/* .form-field__input {
     padding: 8px 12px;
-    width: 224px;
+    width: 224px; */
     /* height: 32px; */
 
     /* transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-    background-color: rgba(248, 210, 78, 0.1);
+   /*  background-color: rgba(248, 210, 78, 0.1);
     border: 1px solid #84A178;
     border-radius: 10px;
-}
+} */
 
 
-.form-field__input::placeholder,
+/* .form-field__input::placeholder,
 .form-field__textarea::placeholder {
     color: #131313;
    
-}
-.form-field__textarea {
+} */
+/* .form-field__textarea {
     resize: none;
-    padding: 8px 12px;
+    padding: 8px 12px; */
     /* padding-top: 8px;
     padding-left: 12px; */
-    width: 224px;
+   /*  width: 224px;
     height: 65px;
     font-family: inherit;
-
+ */
     /* transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-
+/* 
     background-color: rgba(248, 210, 78, 0.1);
     border: 1px solid #84A178;
     border-radius: 10px;
+} */
+
+
+
+.group-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* min-height: 100vh; */
+    flex-direction: column;
+
+    width: 250px;
+
+    gap: 12px;
 }
 
+.form-field {
+    position: relative;
+    
+    
+}
+
+
+
+.form-field__input {
+
+    width: 224px;
+    padding: 8px 12px;
+    border: 1px solid #84A178;
+    background-color: rgba(248, 210, 78, 0.1);
+    border-radius: 10px;
+    outline: none;
+    color: #131313;
+
+    
+    font-family: inherit;
+    font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.4;
+}
+
+.form-field__wrap {
+    position: absolute;
+    left: 0;
+    padding: 8px 12px;
+    pointer-events: none;
+    text-transform: uppercase;
+    
+    color: #131313;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.4;
+
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field__input:valid ~ span,
+.form-field__input:focus ~ span,
+.form-field__textarea:focus ~ span {
+    color:#84A178;
+    transform: translateX(10px) translateY(-7px);
+    font-size: 10px;
+    padding: 0 12px;
+    background-color: #FCFCFC;
+    border-left: 1px solid #84A178;
+    border-right: 1px solid #84A178;
+}
+
+.form-field__input:valid,
+.form-field__input:focus,
+.form-field__textarea:focus,
+.form-field__textarea:valid {
+    border: 1px solid #84A178;
+
+}
+
+
+.form-field--textarea {
+    margin-bottom: 14px;
+}
+
+
+.form-field__textarea {
+
+    width: 224px;
+    padding: 8px 12px;
+    border: 1px solid #84A178;
+    background-color: rgba(248, 210, 78, 0.1);
+    border-radius: 10px;
+    outline: none;
+    color: #131313;
+
+
+    font-family: inherit;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.4;
+
+    resize: none;
+}
 
 .btn--submit {
     padding: 12px 34px;
